2019-04-19  Devin Rousso  <drousso@apple.com>

        Web Inspector: Timelines: adjust default Media timeline column widths
        https://bugs.webkit.org/show_bug.cgi?id=197114

        Reviewed by Joseph Pecoraro.

        * UserInterface/Views/MediaTimelineView.js:
        (WI.MediaTimelineView):

2019-04-18  Devin Rousso  <drousso@apple.com>

        Web Inspector: REGRESSION (r244155): pressing down expands folders in trees
        https://bugs.webkit.org/show_bug.cgi?id=197051
        <rdar://problem/50006414>

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/TreeOutline.js:
        (WI.TreeOutline.prototype.selectionControllerPreviousSelectableItem):
        (WI.TreeOutline.prototype.selectionControllerNextSelectableItem):
        Skip hidden items when traversing the tree.

        * UserInterface/Views/DOMTreeOutline.js:
        (WI.DOMTreeOutline.prototype.ondelete):
        Reveal all items about to be deleted so that the above change won't skip any siblings.

2019-04-18  Devin Rousso  <drousso@apple.com>

        Web Inspector: Canvas: enable WebGL2 for inspector page
        https://bugs.webkit.org/show_bug.cgi?id=196932
        <rdar://problem/49916213>

        Reviewed by Timothy Hatcher.

        * UserInterface/Models/RecordingAction.js:
        (WI.RecordingAction._prototypeForType):
        (WI.RecordingAction.prototype.process.getContent):
        Add additional checks for `ImageBitmapRenderingContext` and `WebGLRenderingContext`.

2019-04-17  Nikita Vasilyev  <nvasilyev@apple.com>

        Web Inspector: Navigating to resource sometimes shows different resource
        https://bugs.webkit.org/show_bug.cgi?id=195978
        <rdar://problem/49043191>

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/NavigationSidebarPanel.js:
        (WI.NavigationSidebarPanel.prototype.cancelRestoringState):
        Reset _pendingViewStateCookie so _checkElementsForPendingViewStateCookie could exit early.
