@@ -1,5 +1,16 @@
 2019-04-19  Devin Rousso  <drousso@apple.com>
 
+        Web Inspector: Timelines: CPU: remove extra border under last section
+        https://bugs.webkit.org/show_bug.cgi?id=197120
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Views/CPUTimelineView.css:
+        (.timeline-view.cpu > .content > .overview):
+        (.timeline-view.cpu > .content > .overview:not(:last-child)): Added.
+
+2019-04-19  Devin Rousso  <drousso@apple.com>
+
         Web Inspector: Timelines: adjust default Media timeline column widths
         https://bugs.webkit.org/show_bug.cgi?id=197114
 
